# emux

./: README.md  pyproject.toml
src/claude_runner/: __init__.py  server.py
src/emux/: __init__.py  cli.py  server.py  tui.py
src/tmux_mcp/: __init__.py  server.py
tests/: test_basic.py
