[project]
name = "claude-runner"
version = "0.1.0"
description = "MCP server that runs Claude Code CLI commands as subprocesses — for autonomous marketplace install testing, scripted Claude invocations, and agent-driven Claude Code automation."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eidos AGI", email = "daniel@eidosagi.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "claude-code", "agent", "subprocess", "automation", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/eidos-agi/claude-runner"
Repository = "https://github.com/eidos-agi/claude-runner"
Issues = "https://github.com/eidos-agi/claude-runner/issues"

[project.scripts]
claude-runner = "claude_runner.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_runner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
