[project]
name = "emux"
version = "0.1.0"
description = "Eidos mux — pick up where you left off in tmux. TUI picker for registered sessions + an MCP server for agent-driven attach/send/capture."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eidos AGI", email = "daniel@eidosagi.com" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["mcp", "tmux", "agent", "automation", "terminal", "session", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
]
dependencies = [
    "mcp>=1.2.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/eidos-agi/emux"
Repository = "https://github.com/eidos-agi/emux"
Issues = "https://github.com/eidos-agi/emux/issues"

[project.scripts]
emux = "emux.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/emux"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
